# lorentz-transform-testroom

./: .gitignore  Cargo.toml  README.md  input.toml
examples/: acceleration.toml  bug.toml  chaos.toml  close-call.toml  diagonal.toml  length-contraction.toml  simultaneity.toml  twin-paradox.toml
src/: config.rs  ctxt.rs  graphics.rs  lorentz.rs  main.rs  path.rs  pixelate.rs  stdin.rs
