[package]
name = "special-relativity-testroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
toml = { version = "0.8", features = ["parse", "display"] }
minifb = "0.25"
